Implement logout route

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
               <h3><a class='createTest' href='/test/new'>Create a test</a></h3>
             </div>
             <div>
-              <h3><a href="/therapist/logout">Logout</a></h3>
+              <h3><a href="/logout">Logout</a></h3>
             </div>
           </div>
         <% else %>
