--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -1,11 +1,14 @@
 <div class="box editPatientBox">
   <h1>Edit Patient Information</h1>
-  <form action="/patients/<%= @patient %>" method='PUT'>
-    <input type='text' name='patient[first_name]' value="<%= @patient.first_name %>" required>
-    <input type='text' name='patient[last_name]' value="<%= @patient.last_name %>" required>
-    <input type='text' name='patient[birthday]' value="<%= @patient.birthday %>" required>
-    <input type='email' name='patient[email]' value="<%= @patient.email %>" required>
-    <input type='hidden' name='patient[id]' value="<%= @patient.id %>" required>
-    <input type='submit' value='Register'>
-  </form>
+
+  <%= form_for @patient do |f| %>
+    <%= f.text_field :first_name %>
+    <%= f.text_field :last_name %>
+    <%= f.select(:gender, options_for_select(["Gender", "Male", "Female"], disabled: "Gender", selected: 'Gender')) %>
+    <%= f.text_field :birthday %>
+    <%= f.text_field :weight %>
+    <%= f.text_field :height %>
+    <%= f.submit "Update" %>
+  <% end %>
+
 </div>
