Add email_field to edit patient form

--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -8,6 +8,7 @@
     <%= f.text_field :birthday %>
     <%= f.text_field :weight %>
     <%= f.text_field :height %>
+    <%= f.email_field :email %>
     <%= f.submit "Update" %>
   <% end %>
 
