--- a/app/views/tests/new.html.erb
+++ b/app/views/tests/new.html.erb
@@ -2,17 +2,9 @@
   <h1>New Test</h1>
   <p>Create a new test using this form. Submit the test's description and its formula to be evaluated and implemented</p>
 
-  <%= form_for :test, url: { action: 'create'}, html: {class: 'newTestForm'} do |f| %>
+  <%= form_for @test, html: {class: 'newTestForm'} do |f| %>
     <%= f.text_field(:name, placeholder: "Test Name") %>
     <%= f.text_area(:description, placeholder: "Description") %>
-      <datalist id='componentsList'>
-        <% @components.each do |component| %>
-          <option value="<%= component.name %>">
-        <% end %>
-      </datalist>
-    <a class='addComponent' href=''>Add Components</a>
-    <%= f.text_field(:components, list: "componentsList", placeholder: "Component (Unit)") %>
     <%= f.submit "Create" %>
   <% end %>
-
 </div>
