--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,52 +1,70 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>RailsEtherapytrackr</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-  <div class="wrapper">
-    <body>
-      <%= display_error %>
-      <div id="NavBar">
-        <h1><%= link_to 'eTherapyTrackr', root_path %></h1>
-        <% if current_therapist %>
-          <div class='loggedIn'>
-            <h3>Welcome</h3>
-            <div class='activities'>
-              <h3><%= link_to "Register a patient", new_patient_path, class: 'regPatient' %></h3>
-              <h3><%= link_to "Update a patient", patients_path, class: 'editPatient' %></h3>
-              <h3><%= link_to "Evaluate a patient", new_evaluation_path, class: 'evalPatient' %></h3>
-              <h3><%= link_to "Create a test", new_test_path, class: 'createTest' %></h3>
-            </div>
-            <div>
-              <h3><%= link_to "Logout", logout_path %></h3>
-            </div>
-          </div>
-        <% else %>
-          <div class='login'>
-            <h3>Login</h3>
-            <%= form_tag("/login", method: "GET") do %>
-              <%= email_field('therapist', 'email', placeholder: 'Email') %>
-              <%= password_field(:therapist, :password, placeholder: 'Password') %>
-              <%= submit_tag("Login") %>
-            <% end %>
-            <h4>- or -</h4>
-            <h3>Signup</h3>
-            <%= form_tag("/signup", method: "POST") do %>
-              <%= text_field('therapist', 'name', placeholder: 'Name') %>
-              <%= text_field('therapist', 'profession', placeholder: 'Profession') %>
-              <%= email_field('therapist', 'email', placeholder: 'Email') %>
-              <%= password_field(:therapist, :password, placeholder: 'Password') %>
-              <%= submit_tag("Signup") %>
-            <% end %>
-          </div>
-        <% end %>
-      </div>
-      <div id='Main'>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title><%= content_for?(:title) ? yield(:title) : "eTherapyTrackr" %></title>
+
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "vendor/modernizr" %>
+    <%= csrf_meta_tags %>
+  </head>
+
+  <body>
+    <%= display_error %>
+    <nav class="top-bar" data-topbar role="navigation">
+      <ul class="title-area">
+        <li class="name">
+          <h1><%= link_to 'eTherapyTrackr', root_path %></h1>
+        </li>
+      </ul>
+      <% if current_therapist %>
+      <section class="top-bar-section">
+        <ul class="right">
+          <li><%= link_to "Register a patient", new_patient_path, class: 'regPatient' %></li>
+          <li><%= link_to "Update a patient", patients_path, class: 'editPatient' %></li>
+          <li><%= link_to "Evaluate a patient", new_evaluation_path, class: 'evalPatient' %></li>
+          <li><%= link_to "Create a test", new_test_path, class: 'createTest' %></li>
+          <li class="active"><%= link_to "Logout", logout_path %></li>
+        </ul>
+      </section>
+    </nav>
+
+    <section role="main" class="scroll container">
+      <div class="row">
         <%= yield %>
       </div>
-    </body>
-  </div>
+      <%= javascript_include_tag "application" %>
+
+      <% else %>
+
+    </nav>
+
+    <section role="main" class="scroll-container">
+      <div class="row">
+        <hr>
+        <div class="small-6 small-centered columns panel">
+          <h4 class="text-center">Login</h4>
+          <%= form_tag("/login", method: "GET") do %>
+            <%= email_field('therapist', 'email', placeholder: 'Email') %>
+            <%= password_field(:therapist, :password, placeholder: 'Password') %>
+            <%= submit_tag("Login", class: 'small button') %>
+          <% end %>
+          <hr>
+          <h4 class="text-center">Signup</h4>
+          <%= form_tag("/signup", method: "POST") do %>
+            <%= text_field('therapist', 'name', placeholder: 'Name') %>
+            <%= email_field('therapist', 'email', placeholder: 'Email') %>
+            <%= password_field(:therapist, :password, placeholder: 'Password') %>
+            <%= submit_tag("Signup", class: 'small button') %>
+          <% end %>
+        </div>
+      </div>
+      <%= javascript_include_tag "application" %>
+
+      <% end %>
+    </section>
+
+  </body>
 </html>
