Patients: Reformat index view to include evaluations history link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         <ul class="right">
           <% if current_therapist %>
             <li><%= link_to "Register a patient", new_patient_path %></li>
-            <li><%= link_to "Update a patient", patients_path %></li>
+            <li><%= link_to "Patients", patients_path %></li>
             <li><%= link_to "Evaluate a patient", new_evaluation_path %></li>
             <li><%= link_to "Submit a test", new_test_path %></li>
             <li class="active"><%= link_to "Logout", logout_path %></li>
