--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,9 +1,21 @@
 <div class="box selectPatientBox">
-  <h1>Update Patient Record</h1>
-  <p>Select a patient to update their information</p>
-    <ul>
+  <h1>Patients</h1>
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Gender</th>
+        <th>Email</th>
+        <th>Update information</th>
+        <th>Test History</th>
+      </tr>
       <% @patients.each do |patient| %>
-        <li><%= link_to patient.last_name + ", " + patient.first_name + " | " + patient.gender + " | " + patient.email, edit_patient_path(patient) %></li>
+        <tr>
+          <td><%= patient.last_name + ", " + patient.first_name %></td>
+          <td><%= patient.gender %></td>
+          <td><%= patient.email %></td>
+          <td><%= link_to "Update", edit_patient_path(patient) %></td>
+          <td><%= link_to "History", evaluations_path(patient) %></td>
+        </tr>
       <% end %>
-    </ul>
+    </table>
 </div>
