--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,7 +1,7 @@
 <div class="row regPatientBox">
   <h1>Register Patient</h1>
   <p>Please complete this form.</p>
-  <%= form_for :patient, url: {action: "create"} do |f| %>
+  <%= form_for @patient do |f| %>
     <div class="row">
       <div class="small-2 columns left">
         <%= f.label "First name", class: "right inline", for: "patient[first_name]" %>
