Evaluations: Implement date method to format display

--- a/app/views/evaluations/index.html.erb
+++ b/app/views/evaluations/index.html.erb
@@ -12,7 +12,7 @@
         </tr>
         <% @evaluations.each do |e| %>
         <tr>
-          <td><%= e.created_at %></td>
+          <td><%= e.date %></td>
           <td><%= e.score %></td>
         </tr>
         <% end %>
